--- a/pyproject.toml
+++ b/pyproject.toml
@@ -118,3 +118,13 @@ log_level = "DEBUG"
 python_files = ["test_*.py"]
 testpaths = ["tests"]
 addopts = "-v --tb=short -rxs -W=error --durations=0 --cov=shtab --cov-report=term-missing --cov-report=xml"
+
+[tool.codespell]
+ignore-words-list = """
+fo
+"""
+skip = """./.*,*/.metadata,*.xml,configure,*Makefile*,config*,*.m4,man.html"""
+quiet-level=2
+ignore-regex = '\\[fnrstv]'
+builtin = "clear,rare,informal"
+
