Raise minimum supported Python version to 3.8
Required for:
- `typing.Protocol`
- walrus operator

Using `collections.abc` instead of `typing` requires 3.9 for
type-checking only!

Signed-off-by: Philipp Hahn <p.hahn@avm.de>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,10 +8,10 @@ jobs:
   test:
     if: github.event_name != 'pull_request' || !contains('OWNER,MEMBER,COLLABORATOR', github.event.pull_request.author_association)
     name: Test py${{ matrix.python }}
-    runs-on: ubuntu-${{ matrix.python == 3.7 && '22.04' || 'latest' }}
+    runs-on: ubuntu-${{ 'latest' }}
     strategy:
       matrix:
-        python: [3.7, 3.12]
+        python: [3.8, 3.12]
     steps:
     - uses: actions/checkout@v4
       with: {fetch-depth: 0}
